fixed contrast error when in light mode for text summary

--- a/css/style.css
+++ b/css/style.css
@@ -99,7 +99,7 @@ a[href="#main"]:focus {
 
 .summary h2 {
     margin-bottom: 0.5rem;
-    color: #5CADFF;
+    color: #004f9e;
 }
 
 /* Team Results Table */
